
[package]
name = "redis_clone"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.59"                                    # error handling
bytes = "1.3.0"                                      # helps manage buffers
clap = { version = "4.5.15", features = ["derive"] }
hex = "0.4.3"
rand = "0.8.5"
thiserror = "1.0.32"                                 # error handling
tokio = { version = "1.23.0", features = ["full"] }  # async networking
ulid = "1.1.3"
